--- a/app/views/actor_templates/details.html.erb
+++ b/app/views/actor_templates/details.html.erb
@@ -1,11 +1,106 @@
- <table border="1">
-   <tr>
-     <th>Title</th>
-     <th>Year</th>
-     <th>Director</th>
-     <th>Character name</th>
-     <th></th>
-   </tr>
- 
+<h1>
+  Actor #<%= @the_actor.id %> details
+</h1>
 
-<%= @x %>
+<a href="/actors">
+  Go back
+</a>
+
+<hr>
+
+<dl>
+  <dt>
+    Name
+  </dt>
+  <dd>
+    <%= @the_actor.name %>
+  </dd>
+
+  <dt>
+    Dob
+  </dt>
+  <dd>
+    <%= @the_actor.dob %>
+  </dd>
+
+  <dt>
+    Bio
+  </dt>
+  <dd>
+    <%= @the_actor.bio %>
+  </dd>
+
+  <dt>
+    Image
+  </dt>
+  <dd>
+    <img src="<%= @the_actor.image %>" style="width:250px;">
+  </dd>
+
+  <dt>
+    Created at
+  </dt>
+  <dd>
+    <%= @the_actor.created_at %>
+  </dd>
+
+  <dt>
+    Updated at
+  </dt>
+  <dd>
+    <%= @the_actor.updated_at %>
+  </dd>
+</dl>
+
+<hr>
+
+<h2>Filmography</h2>
+
+<table border="1">
+  <tr>
+    <th>
+      Title
+    </th>
+
+    <th>
+      Year
+    </th>
+
+    <th>
+      Director
+    </th>
+
+    <th>
+      Character name
+    </th>
+
+    <th>
+    </th>
+  <% Character.where({:actor_id => @the_actor.id }).each do |a_matching| %>
+    </tr>
+      <tr>
+        <td>
+          <%= Movie.where({:id => a_matching.movie_id}).at(0).title %>
+        </td>
+
+        <td>
+          <%= Movie.where({:id => a_matching.movie_id}).at(0).year %>
+        </td>
+
+        <td>
+          <% @matching_director= Movie.where({:id => a_matching.movie_id}).at(0).director_id %>
+          <%= Director.where({:id =>@matching_director}).at(0).name%>
+        </td>
+
+        <td>
+          <%= a_matching.name %>
+        </td>
+
+        <td>
+          <a href="/movies/<%= a_matching.movie_id %>">
+            Show details
+          </a>
+        </td>
+      </tr>
+  <%end %>
+</table>
